# coe

./: .gitignore  README.md  README_coe.md  README_sv.md  baseline.sh  baseline_ablation.sh  coe.sh  data.sh  desc.sh  helper.py  lit.md  main.py  probe.sh  probe_ablation.sh  probe_la.sh  progress.md  pyproject.toml  steering.sh  sv.sh  tables.sh
baselines/0322_bert_f1/: bert_arxiv_chatgpt.json  bert_reddit_chatgpt.json  bert_wikihow_chatgpt.json  bert_wikipedia_chatgpt.json
baselines/0325_first_run_before_local_ds/: binoculars_arxiv_chatgpt.json  encoder_reddit_chatgpt.json  encoder_wikihow_chatgpt.json  encoder_wikipedia_chatgpt.json  fastdetectgpt_reddit_chatgpt.json  fastdetectgpt_wikipedia_chatgpt.json
baselines/0326_results_n500_binoculars_low/: binocularsL_wikihow_chatgpt.json  binoculars_arxiv_chatgpt.json  binoculars_reddit_chatgpt.json  binoculars_wikihow_chatgpt.json  binoculars_wikipedia_chatgpt.json  entropy_arxiv_chatgpt.json  entropy_reddit_chatgpt.json  entropy_wikipedia_chatgpt.json  fastdetectgpt_arxiv_chatgpt.json  fastdetectgpt_reddit_chatgpt.json  fastdetectgpt_wikihow_chatgpt.json  fastdetectgpt_wikipedia_chatgpt.json  likelihood_arxiv_chatgpt.json  likelihood_wikipedia_chatgpt.json  llr_arxiv_chatgpt.json  llr_wikihow_chatgpt.json
baselines/test/: bert_wikipedia_chatgpt.json  binocularsL_arxiv_chatgpt.json  binocularsL_reddit_chatgpt.json  binocularsL_wikipedia_chatgpt.json  binoculars_reddit_chatgpt.json  (+27 more)
data/: counterfact.jsonl
item/: ood.tex  ood_log.tex  t_id.tex
notes/: README_sv.md  bandb.md  benchmarks.md  literature.md  narrative.md  probe.md  progress.md  rq.md
src/: baseline.py  baseline.sh  classifier.py  coe.py  coo.py  data_prep.py  inference.py  ld.py  ld.sh  run.py  run.sh  score.py  steering.py  steering.sh  tables.py  test.py  utils.py  vis.py
tables/: baseline_acc.tex  sv_id_auroc_sandbox.tex  t1_acc.tex  t1_acc_6_features.tex  zero_auc_table.tex
zero_scores/: auroc_llama_8b_arxiv_chatgpt_MODElast_token_DV0_PF0_NO1.json  auroc_llama_8b_reddit_chatgpt_MODElast_token_DV0_PF0_NO1.json  auroc_llama_8b_wikihow_chatgpt_MODElast_token_DV0_PF0_NO1.json  auroc_llama_8b_wikipedia_chatgpt_MODElast_token_DV0_PF0_NO1.json
(+5747 files in other folders)
