[project]
name = "coe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "plotly",
    "scipy",
    "seaborn",
    "scikit-learn",
    "torch",
    "transformers",
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
]
