[project]
name = "coe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "plotly",
    "scipy",
    "seaborn",
    "scikit-learn",
    "torch==2.5.1",
    "transformers",
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
    "fuzzywuzzy>=0.18.0",
    "xgboost>=3.2.0",
    "rouge>=1.0.1",
    "tiktoken>=0.12.0",
    "sentencepiece>=0.2.1",
    "protobuf>=7.34.1",
    "textdistance>=4.6.3",
    "peft>=0.19.1",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
# Use the CUDA index only on Linux; default to PyPI on macOS
torch = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
]
torchaudio = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
]
